--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
+    "@react-three/drei": "^9.56.24",
+    "@react-three/fiber": "^8.11.0",
     "@types/node": "^18.13.0",
+    "@types/three": "^0.149.0",
     "classnames": "^2.3.2",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scroll-parallax": "^3.3.2"
+    "react-scroll-parallax": "^3.3.2",
+    "three": "^0.149.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
