--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-scroll-parallax": "^3.3.2",
     "three": "^0.149.0"
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
