--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && pagecrypt src/index.html dist/index.html $PASSWORD && cp -R src/css dist/",
     "preview": "vite preview",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,scss,md,json} --config ./.prettierrc",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
@@ -18,6 +18,7 @@
     "@types/three": "^0.149.0",
     "classnames": "^2.3.2",
     "framer-motion": "^9.0.1",
+    "pagecrypt": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll-parallax": "^3.3.2",
