--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-scroll-parallax": "^3.3.2",
     "three": "^0.149.0",
     "vite-plugin-svgr": "^2.4.0"
